[gd_scene load_steps=6 format=3 uid="uid://dojev1p0r4cwn"]

[ext_resource type="AudioStream" uid="uid://d7mhun4oen1l" path="res://Prefabs/Bomb/Sounds/Thud.mp3" id="1_mlffu"]
[ext_resource type="Script" path="res://Prefabs/Sheild/ShieldExplosion.gd" id="1_xcatn"]
[ext_resource type="Texture2D" uid="uid://8x7yinyohkik" path="res://Lights/LightGradient.png" id="2_1amv6"]
[ext_resource type="PackedScene" uid="uid://cqtj81vec172h" path="res://Prefabs/Pixel/PixelGroup.tscn" id="3_2xfoq"]
[ext_resource type="PackedScene" uid="uid://cgrn6ejyprxju" path="res://Prefabs/Pixel/Pixel.tscn" id="4_ba28q"]

[node name="ShieldExplosion" type="Node2D"]
script = ExtResource("1_xcatn")

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_mlffu")
autoplay = true

[node name="ExplosionLight" type="PointLight2D" parent="."]
color = Color(1, 0.0941176, 0.129412, 1)
energy = 4.0
texture = ExtResource("2_1amv6")
texture_scale = 0.2
height = 1.0
metadata/_edit_lock_ = true

[node name="ExplosionPixels" parent="." groups=["ShieldExplosions"] instance=ExtResource("3_2xfoq")]
PixelColor = Color(0, 0, 0, 0.443137)
CollisionLayer = 1
CollisionMask = 15
metadata/_edit_lock_ = true

[node name="Pixel" parent="ExplosionPixels" instance=ExtResource("4_ba28q")]
position = Vector2(1, -2)

[node name="Pixel2" parent="ExplosionPixels" instance=ExtResource("4_ba28q")]
position = Vector2(-2, 0)

[node name="Pixel3" parent="ExplosionPixels" instance=ExtResource("4_ba28q")]
position = Vector2(-1, 2)

[node name="Pixel4" parent="ExplosionPixels" instance=ExtResource("4_ba28q")]
position = Vector2(-3, -2)

[node name="Pixel5" parent="ExplosionPixels" instance=ExtResource("4_ba28q")]
position = Vector2(-1, -3)

[node name="Pixel6" parent="ExplosionPixels" instance=ExtResource("4_ba28q")]
position = Vector2(0, -1)

[node name="Pixel7" parent="ExplosionPixels" instance=ExtResource("4_ba28q")]
position = Vector2(-1, -1)

[node name="Pixel8" parent="ExplosionPixels" instance=ExtResource("4_ba28q")]
position = Vector2(0, 1)

[node name="Pixel9" parent="ExplosionPixels" instance=ExtResource("4_ba28q")]
position = Vector2(-1, -4)
